--- a/sass/style.css
+++ b/sass/style.css
@@ -32,14 +32,12 @@ body {
   padding: 15rem 6% 10rem;
 }
 
-
 /* MAIN */
 .content {
   display: flex;
   flex-direction: column;
   gap: 3.2rem;
   background-color: var(--White);
-  padding: 2.4rem 2.4rem 4.8rem;
   border-radius: 2rem;
   box-shadow: 0 10px 40px var(--Very-dark-desaturated-blue);
   min-width: 33rem;
@@ -47,6 +45,7 @@ body {
 }
 @media (min-width: 1440px) {
   .content {
+    position: relative;
     flex-direction: row;
     max-width: 100%;
     width: 924px;
@@ -55,18 +54,27 @@ body {
     background-position-y: -281px;
     background-repeat: no-repeat;
     background-size: 100%;
-    padding: 8rem 10rem;
   }
+}
+.content .header {
+  padding: 2.4rem 2.4rem 4.8rem;
 }
 @media (min-width: 1440px) {
   .content .header {
+    padding: 8rem 10rem;
     width: 100%;
+    overflow: hidden;
   }
 }
 .content .header__img {
   width: 24rem;
   margin: -13.2rem auto 0;
   display: block;
+}
+@media (min-width: 1440px) {
+  .content .header__img {
+    display: none;
+  }
 }
 .content .header__img--shadow {
   content: url(../images/bg-pattern-mobile.svg);
@@ -78,19 +86,37 @@ body {
     content: "";
   }
 }
+.content .header__img-desktop {
+  display: none;
+}
 @media (min-width: 1440px) {
-  .content .header__img {
+  .content .header__img-desktop {
+    display: block;
     width: 47rem;
     margin: -2rem 0 0 -18rem;
   }
 }
+.content .header__img-box {
+  display: none;
+}
+@media (min-width: 1440px) {
+  .content .header__img-box {
+    display: block;
+    position: absolute;
+    top: 19rem;
+    left: -9rem;
+    z-index: 1000;
+  }
+}
 .content .card {
+  padding: 2.4rem 2.4rem 4.8rem;
   display: grid;
   gap: 3.2rem;
 }
 @media (min-width: 1440px) {
   .content .card {
     width: 100%;
+    padding: 8rem 10rem 8rem 0;
   }
 }
 .content .card__title {
