--- a/sass/style.scss
+++ b/sass/style.scss
@@ -39,12 +39,12 @@ body {
   flex-direction: column;
   gap: 3.2rem;
   background-color: var(--White);
-  padding: 2.4rem 2.4rem 4.8rem;
   border-radius: 2rem;
   box-shadow: 0 10px 40px var(--Very-dark-desaturated-blue);
   min-width: 33rem;
   max-width: 33rem;
   @media (min-width: 1440px) {
+    position: relative;
     flex-direction: row;
     max-width: 100%;
     width: 924px;
@@ -53,16 +53,22 @@ body {
     background-position-y: -281px;
     background-repeat: no-repeat;
     background-size: 100%;
-    padding:8rem 10rem;
   }
   .header {
+    padding: 2.4rem 2.4rem 4.8rem;
+    
     @media (min-width: 1440px) {
+      padding:8rem 10rem;
       width: 100%;
+      overflow: hidden;
     }
     &__img {
       width: 24rem;
       margin: -13.2rem auto 0;
       display: block;
+      @media (min-width: 1440px) {
+        display: none;
+      }
       &--shadow {
         content: url(../images/bg-pattern-mobile.svg);
         width: 24rem;
@@ -72,16 +78,34 @@ body {
         }
       }
       @media (min-width: 1440px) {
+      }
+    }
+    &__img-desktop{
+      display: none;
+      @media (min-width: 1440px) {
+        display: block;
         width: 47rem;
         margin: -2rem 0 0 -18rem;
       }
     }
+    &__img-box{
+      display: none;
+      @media (min-width: 1440px) {
+        display: block;
+        position: absolute;
+        top: 19rem;
+        left: -9rem;
+        z-index: 1000;
+      }
+    }
   }
   .card {
+    padding: 2.4rem 2.4rem 4.8rem;
     display: grid;
     gap: 3.2rem;
     @media (min-width: 1440px) {
       width: 100%;
+      padding:8rem 10rem 8rem 0;
     }
     &__title {
       text-align: center;
