--- a/sass/style.css
+++ b/sass/style.css
@@ -56,9 +56,6 @@ body {
     background-size: 100%;
   }
 }
-.content .header {
-  padding: 2.4rem 2.4rem 4.8rem;
-}
 @media (min-width: 1440px) {
   .content .header {
     padding: 8rem 10rem;
@@ -68,7 +65,7 @@ body {
 }
 .content .header__img {
   width: 24rem;
-  margin: -13.2rem auto 0;
+  margin: -11rem auto 0;
   display: block;
 }
 @media (min-width: 1440px) {
@@ -109,7 +106,7 @@ body {
   }
 }
 .content .card {
-  padding: 2.4rem 2.4rem 4.8rem;
+  padding: 0 2.4rem 4.8rem;
   display: grid;
   gap: 3.2rem;
 }
