--- a/sass/style.scss
+++ b/sass/style.scss
@@ -55,16 +55,14 @@ body {
     background-size: 100%;
   }
   .header {
-    padding: 2.4rem 2.4rem 4.8rem;
-    
     @media (min-width: 1440px) {
-      padding:8rem 10rem;
+      padding: 8rem 10rem;
       width: 100%;
       overflow: hidden;
     }
     &__img {
       width: 24rem;
-      margin: -13.2rem auto 0;
+      margin: -11rem auto 0;
       display: block;
       @media (min-width: 1440px) {
         display: none;
@@ -80,7 +78,7 @@ body {
       @media (min-width: 1440px) {
       }
     }
-    &__img-desktop{
+    &__img-desktop {
       display: none;
       @media (min-width: 1440px) {
         display: block;
@@ -88,7 +86,7 @@ body {
         margin: -2rem 0 0 -18rem;
       }
     }
-    &__img-box{
+    &__img-box {
       display: none;
       @media (min-width: 1440px) {
         display: block;
@@ -100,20 +98,20 @@ body {
     }
   }
   .card {
-    padding: 2.4rem 2.4rem 4.8rem;
+    padding: 0 2.4rem 4.8rem;
     display: grid;
     gap: 3.2rem;
     @media (min-width: 1440px) {
       width: 100%;
-      padding:8rem 10rem 8rem 0;
+      padding: 8rem 10rem 8rem 0;
     }
     &__title {
       text-align: center;
       font-size: 3.2rem;
       line-height: 4rem;
       @media (min-width: 1440px) {
-      text-align: left;
-    }
+        text-align: left;
+      }
     }
     &__content {
       display: grid;
@@ -150,7 +148,7 @@ body {
       transition: 300ms;
       top: 6px;
     }
-    &__line{
+    &__line {
       border-color: transparent;
       border-bottom-color: 1px solid var(--Light-grayish-blue);
       margin: 0;
